--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -25,6 +25,7 @@ body {
 
 .rocket:hover {
   background-color: #e8e8e8;
+  box-shadow: 2px 2px 2px 2px #747572;
 }
 
 .rocket-info {
@@ -89,4 +90,16 @@ body {
   height: max-content;
   border-radius: 5px;
   border: none;
+}
+
+img {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.rocket:hover img {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
 }
