--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -3,21 +3,22 @@
   flex-direction: row;
   justify-content: center;
   width: 80%;
-  gap: 4rem;
+  gap: 2rem;
+  margin-left: 5px;
+  padding-left: 10px;
 }
 
 .reserved-list-mission {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  width: 50%;
+  border: 1px solid #000;
+  margin-left: 5rem;
 }
 
 .reserved-list-rocket {
   display: flex;
   flex-direction: column;
   border: 1px solid #000;
-  margin-left: 5rem;
 }
 
 .reserved-item {
