--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -25,6 +25,41 @@ nav {
   margin-bottom: 0.5rem;
 }
 
+.logo-img {
+  margin: 0;
+  padding: 0;
+  transform: rotate(0deg);
+  animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.logo-title {
+  margin: 0;
+  padding: 0;
+  margin-left: 0.5rem;
+  transform: rotate(0deg);
+  animation: logo 3s ease-in-out infinite;
+}
+
+@keyframes logo {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-20px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 /* Styling Links */
 .nav-links {
   display: flex;
