--- a/src/components/mission.css
+++ b/src/components/mission.css
@@ -142,3 +142,22 @@ body {
   border-radius: 4px;
   border: none;
 }
+
+@media (max-width: 768px) {
+  .mission {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0.4rem;
+  }
+
+  .join-button,
+  .active-member,
+  .leave-button,
+  .not-member {
+    width: 5rem;
+    font-size: 1.5vw;
+    font-weight: 500;
+  }
+}
