--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: row;
   width: 85vw;
-  height: 10.625rem;
+  height: 12.5rem;
   margin: 0.313rem 4.25rem 0;
   padding: 2rem 9.188rem 1.625rem 1.688rem;
   border-radius: 4px;
@@ -32,7 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding-left: 2rem;
+  padding-left: 3rem;
 }
 
 .rocket-name {
@@ -93,6 +93,8 @@ body {
 }
 
 img {
+  width: 12rem;
+  height: auto;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.3s ease-in-out;
@@ -102,4 +104,57 @@ img {
 .rocket:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
+}
+
+@media (max-width: 768px) {
+  .rocket {
+    width: 100%;
+    padding: 2rem 1.188rem 0.625rem 1.688rem;
+  }
+
+  .rocket-info {
+    padding-left: 1rem;
+  }
+
+  .rocket-name {
+    font-size: 1rem;
+  }
+
+  /* .rocket-description {
+    display: flex;
+  } */
+
+  .reserve-button {
+    width: 100%;
+    padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+    border: none;
+    border-radius: 7px;
+    background-color: #0290ff;
+    font-family: RobotoSlab, sans-serif;
+    font-size: 0.913vw;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.5px;
+    text-align: center;
+    color: #fff;
+  }
+
+  .cancel-button {
+    width: 100%;
+    padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+    border: 1px solid #000;
+    border-radius: 7px;
+    background-color: #fff;
+    font-family: RobotoSlab, sans-serif;
+    font-size: 0.913vw;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.5px;
+    text-align: center;
+    color: #000;
+  }
 }
