--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -14,7 +14,7 @@ body {
 .rocket {
   display: flex;
   flex-direction: row;
-  width: 85vw;
+  width: 100%;
   height: 12.5rem;
   margin: 0.313rem 4.25rem 0;
   padding: 2rem 9.188rem 1.625rem 1.688rem;
@@ -31,6 +31,8 @@ body {
 .rocket-info {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 9rem;
   gap: 0.5rem;
   padding-left: 3rem;
 }
@@ -95,6 +97,7 @@ body {
 img {
   width: 12rem;
   height: auto;
+  border-radius: 1.5rem;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.3s ease-in-out;
@@ -106,55 +109,40 @@ img {
   transform: scale(1.3);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .rocket {
+    flex-direction: column;
     width: 100%;
-    padding: 2rem 1.188rem 0.625rem 1.688rem;
+    height: 100vh;
+    padding: 1rem 2rem;
+    gap: 1rem;
   }
 
-  .rocket-info {
-    padding-left: 1rem;
-  }
-
+  .rocket-info,
   .rocket-name {
-    font-size: 1rem;
-  }
-
-  /* .rocket-description {
     display: flex;
-  } */
-
-  .reserve-button {
-    width: 100%;
-    padding: 0.438rem 1.188rem 0.5rem 1.375rem;
-    border: none;
-    border-radius: 7px;
-    background-color: #0290ff;
-    font-family: RobotoSlab, sans-serif;
-    font-size: 0.913vw;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.5px;
-    text-align: center;
-    color: #fff;
+    padding-left: 0;
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .cancel-button {
+  img {
     width: 100%;
-    padding: 0.438rem 1.188rem 0.5rem 1.375rem;
-    border: 1px solid #000;
-    border-radius: 7px;
-    background-color: #fff;
-    font-family: RobotoSlab, sans-serif;
-    font-size: 0.913vw;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.5px;
-    text-align: center;
-    color: #000;
+    height: auto;
+    border-radius: 1rem;
+  }
+
+  .rocket-description {
+    text-align: justify;
+  }
+
+  .reserve-button,
+  .cancel-button {
+    font-size: 1rem;
+    font-weight: 500;
+    width: 10rem;
+    height: 2rem;
+    padding: 0.5rem;
+    margin-top: 1.5rem;
   }
 }
