Modify styles agarin in 'rockets' page

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,6 @@
 nav {
   height: 6rem;
-  width: 98vw;
+  width: 100%;
   background-color: #fff;
   box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
   display: flex;
