--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -14,11 +14,11 @@ body {
 .rocket {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: auto;
   height: 12.5rem;
-  margin: 0.313rem 4.25rem 0;
   padding: 2rem 9.188rem 1.625rem 1.688rem;
-  border-radius: 4px;
+  margin: 0.5rem 4.25rem 0;
+  border-radius: 1rem;
   border: solid 1px #e8e8e8;
   background-color: #fff;
 }
