--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -112,8 +112,9 @@ img {
 @media (max-width: 800px) {
   .rocket {
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    align-self: center;
+    width: auto;
+    height: 40rem;
     padding: 1rem 2rem;
     gap: 1rem;
   }
@@ -122,8 +123,7 @@ img {
   .rocket-name {
     display: flex;
     padding-left: 0;
-    justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 
   img {
@@ -144,5 +144,10 @@ img {
     height: 2rem;
     padding: 0.5rem;
     margin-top: 1.5rem;
+  }
+
+  .rocket:hover img {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
