--- a/src/components/rockets.css
+++ b/src/components/rockets.css
@@ -14,11 +14,12 @@ body {
 .rocket {
   display: flex;
   flex-direction: row;
+  gap: 1rem;
   width: 85vw;
-  height: 10.625rem;
+  height: max-content;
   margin: 0.313rem 4.25rem 0;
-  padding: 2rem 9.188rem 1.625rem 1.688rem;
-  border-radius: 4px;
+  padding: 2rem 4.188rem 1.625rem 1.688rem;
+  border-radius: 10px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
 }
@@ -31,12 +32,13 @@ body {
 .rocket-info {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   padding-left: 2rem;
 }
 
 .rocket-name {
-  font-size: 1.25rem;
+  font-family: 'Poppins', sans-serif;;
+  font-size: 1.5rem;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -46,17 +48,18 @@ body {
 }
 
 .rocket-description {
-  display: flex;
+  text-align: justify;
 }
 
 .reserve-button {
-  width: 10.5rem;
+  width: 13.5rem;
+  height: 2.75rem;
   padding: 0.438rem 1.188rem 0.5rem 1.375rem;
   border: none;
-  border-radius: 7px;
+  border-radius: 10px;
   background-color: #0290ff;
   font-family: RobotoSlab, sans-serif;
-  font-size: 0.913vw;
+  font-size: 1.23vw;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
@@ -66,14 +69,21 @@ body {
   color: #fff;
 }
 
+.reserve-button:hover {
+  background-color: #0a369d;
+  color: #fff;
+  border: 1px solid #0290ff;
+}
+
 .cancel-button {
   width: 13.5rem;
+  height: 2.75rem;
   padding: 0.438rem 1.188rem 0.5rem 1.375rem;
   border: 1px solid #000;
   border-radius: 7px;
   background-color: #fff;
   font-family: RobotoSlab, sans-serif;
-  font-size: 0.913vw;
+  font-size: 1.23vw;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
@@ -83,7 +93,14 @@ body {
   color: #000;
 }
 
+.cancel-button:hover {
+  background-color: #6f686d;
+  color: #fff;
+  border: 1px solid #6f686d;
+}
+
 .is-reserved {
+  width: 6rem;
   background-color: green;
   color: #fff;
   font-size: 12px;
@@ -92,14 +109,21 @@ body {
   border: none;
 }
 
+.figure {
+  width: 15rem;
+  height: 10rem;
+}
+
 img {
+  width: 15rem;
+  height: 10rem;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
-.rocket:hover img {
+.figure:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
 }
