--- a/src/components/mission.css
+++ b/src/components/mission.css
@@ -11,12 +11,24 @@ body {
   background-color: #f5f6fa;
 }
 
+.mission-title {
+  display: grid;
+  grid-template-columns: 15% 55% 30%;
+  justify-content: center;
+  height: max-content;
+  margin: 0.213rem 4.25rem 0;
+  padding: 2rem 1.188rem 0.625rem 1.688rem;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #83b8ba;
+}
+
 .mission {
   display: grid;
   grid-template-columns: 15% 55% 30%;
   justify-content: center;
   height: max-content;
-  margin: 0.313rem 4.25rem 0;
+  margin: 0.213rem 4.25rem 0;
   padding: 2rem 1.188rem 0.625rem 1.688rem;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
@@ -26,6 +38,12 @@ body {
 .mission:hover {
   background-color: #e8e8e8;
   box-shadow: 2px 2px 2px 2px #747572;
+}
+
+.table-header {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-left: 10px;
 }
 
 .mission-name {
@@ -55,7 +73,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   gap: 1rem;
   padding: 0.5rem 0.5rem;
   border-left: 1px solid #e8e8e8;
