--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -143,7 +143,7 @@ nav {
 /* Stying for small screens */
 @media screen and (max-width: 800px) {
   nav {
-    position: fixed;
+    position: relative;
     z-index: 3;
     height: 3rem;
     width: 100%;
@@ -169,8 +169,8 @@ nav {
   }
 
   .logo-img {
-    width: 70%;
-    height: 30%;
+    width: 30%;
+    height: 10%;
   }
 
   @keyframes float {
