--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -127,21 +127,18 @@ nav {
   transition: all ease-in-out 350ms;
 }
 
-/* Styling Hamburger Icon */
-.hamburger div {
-  width: 30px;
-  height: 3px;
-  background: #000;
-  margin: 5px;
-  transition: all 0.3s ease;
-}
-
-.hamburger {
+.mobile-nav-links {
   display: none;
 }
 
+.mobile-menu-icon {
+  display: none;
+  color: #000;
+}
+
+
 /* Stying for small screens */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   nav {
     position: relative;
     z-index: 3;
@@ -187,7 +184,12 @@ nav {
     animation: logo 3s ease-in-out infinite;
   }
 
-  .nav-links {
+  .nav-links li a {
+    font-size: 0.5rem;
+  }
+
+  .mobile-nav-links {
+    display: flex;
     position: fixed;
     background: #131418;
     height: 100vh;
@@ -197,79 +199,41 @@ nav {
     clip-path: circle(50px at 90% -20%);
     transition: all 1s ease-out;
     pointer-events: none;
+    z-index: 3;
   }
 
-  .nav-links.open {
-    -webkit-clip-path: circle(1000px at 90% -10%);
-    clip-path: circle(1000px at 90% -10%);
-    pointer-events: all;
+  .mobile-menu-icon {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    margin: 5px;
+    transition: all 0.3s ease;
+    list-style: none;
+    justify-content: flex-start;
+    align-items: center;
+    text-transform: uppercase;
+    gap: 1rem;
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translate(-5%, -50%);
+    z-index: 2;
+    transition: all 0.7s ease;
+    border-radius: 5px;
+    border:  1px solid #f1e4f3;
   }
 
-  .nav-links li {
-    opacity: 0;
+  .hamburger-icon {
+    margin-top: 1px;
+    color: #000;
+    font-size: 25px;
   }
 
-  .nav-links li:nth-child(1) {
-    transition: all 0.5s ease 0.2s;
+  .close-icon {
+    margin-top: 1px;
+    color: red;
+    font-size: 30px;
   }
 
-  .nav-links li:nth-child(2) {
-    transition: all 0.5s ease 0.4s;
-  }
-
-  .nav-links li:nth-child(3) {
-    transition: all 0.5s ease 0.6s;
-  }
-
-  .nav-links li:nth-child(4) {
-    transition: all 0.5s ease 0.7s;
-  }
-
-  .nav-links li:nth-child(5) {
-    transition: all 0.5s ease 0.8s;
-  }
-
-  .nav-links li:nth-child(6) {
-    transition: all 0.5s ease 0.9s;
-    margin: 0;
-  }
-
-  .nav-links li:nth-child(7) {
-    transition: all 0.5s ease 1s;
-    margin: 0;
-  }
-
-  li.fade {
-    opacity: 1;
-  }
-}
-
-@media (max-width: 768px) {
-  @keyframes logo {
-    0% {
-      transform: translateY(0);
-    }
-
-    50% {
-      transform: translateY(-5px);
-    }
-
-    100% {
-      transform: translateY(0);
-    }
-  }
-}
-
-/* Animating Hamburger Icon on Click */
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toggle .line2 {
-  transition: all 0.7s ease;
-  width: 0;
-}
-
-.toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
 }
