--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -52,3 +52,32 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    width: 80%;
+    gap: 1rem;
+    margin: auto;
+    padding-left: 0;
+    justify-content: center;
+  }
+
+  .profile-title-mission,
+  .profile-title-rocket {
+    margin-left: 0;
+  }
+
+  .reserved-list-mission,
+  .reserved-list-rocket {
+    width: 100%;
+  }
+
+  .reserved-item {
+    width: 100%;
+  }
+
+  .reserved-list-mission {
+    margin-left: auto;
+  }
+}
